--- a/lw1/index.html
+++ b/lw1/index.html
@@ -14,11 +14,11 @@
     <div class="ico-div">
       &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
     </div>
-    <div  class="email-container">
-      <table  role=" presentation" cellspacing="0" cellpadding="0" border="0">
+    <div class="email-container">
+      <table role="presentation" cellspacing="0" cellpadding="0">
         <tr>
           <td valign="top" class="bg_white first-bg">
-            <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+            <table role="presentation" cellpadding="0" cellspacing="0">
               <tr>
                 <td class="logo">
                   <h1><a href="#">Shop</a></h1>
@@ -29,7 +29,7 @@
         </tr>
         <tr>
           <td valign="middle" class="bg_white second-bg ">
-            <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+            <table role="presentation" cellpadding="0" cellspacing="0">
               <tr>
                 <td class="td-price">
                   <div class="text">
@@ -42,7 +42,7 @@
           </td>
         </tr>
         <tr>
-          <table class="bg_white" role="presentation" border="0" cellpadding="0" cellspacing="0">
+          <table class="bg_white" role="presentation" cellpadding="0" cellspacing="0">
             <tr class="tr-product">
               <th class="left">Item</th>
               <th class="right">Price</th>
@@ -63,7 +63,7 @@
               </td>
             </tr>
             <tr class="tr-product">
-              <td class="td-product"valign="middle">
+              <td class="td-product" valign="middle">
                 <div class="product-entry">
                   <img src="img/prod-2.jpg" alt="">
                   <div class="text">
