--- a/lw2/task1/index-dark.html
+++ b/lw2/task1/index-dark.html
@@ -12,8 +12,8 @@
 </head>
 <body class="dark">
   <div class="header">
-    <h1 class="dark-h">Our <span class="underline">Programs</span></h1>
-    <div class="text-header dark-p">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus 
+    <h1 class="header-title dark">Our <span class="underline">Programs</span></h1>
+    <div class="text-header dark">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus 
     pulvinar non sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus 
     mattis nunc aliquam pharetra feugiat ante sollicitudin.
    </div>
@@ -22,51 +22,55 @@
     <div class="row">
       <div class="content">
         <div class="img-content">
-          <img src="img/Image-dark.svg" alt="">
+          <img src="img/image-dark.svg" alt="">
         </div>
         <div class="text-content">
-          <h2 class="dark-h">Program Name</h2>
-          <p class="dark-p">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
+          <h2>Program Name</h2>
+          <div class="text dark">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
             auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
-            Netus sagittis eleifend aliquet urna quis.</p>
-          <button class="button-content">SMALL BUTTON</button>
+            Netus sagittis eleifend aliquet urna quis.
+          </div>
+          <button class="button-content">small button</button>
         </div>
         <div class="content">
           <div class="img-content">
-            <img src="img/Image-dark.svg" alt="">
+            <img src="img/image-dark.svg" alt="">
           </div>
           <div class="text-content">
-            <h2 class="dark-h">Program Name</h2>
-            <p class="dark-p">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
+            <h2>Program Name</h2>
+            <div class="text dark">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
               auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
-              Netus sagittis eleifend aliquet urna quis.</p>
-            <button class="button-content">SMALL BUTTON</button>
+              Netus sagittis eleifend aliquet urna quis.
+            </div>
+            <button class="button-content">small button</button>
           </div>
         </div>
       </div>
     </div>
-    <div class="row-2">
+    <div class="row">
       <div class="content">
         <div class="img-content">
-          <img src="img/Image-dark.svg" alt="">
+          <img src="img/image-dark.svg" alt="">
         </div>
         <div class="text-content">
-          <h2 class="dark-h">Program Name</h2>
-          <p class="dark-p">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
+          <h2>Program Name</h2>
+          <div class="text dark">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
             auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
-            Netus sagittis eleifend aliquet urna quis.</p>
-          <button class="button-content">SMALL BUTTON</button>
+            Netus sagittis eleifend aliquet urna quis.
+          </div>
+          <button class="button-content">small button</button>
         </div>
         <div class="content">
           <div class="img-content">
-            <img src="img/Image-dark.svg" alt="">
+            <img src="img/image-dark.svg" alt="">
           </div>
           <div class="text-content">
-            <h2 class="dark-h">Program Name</h2>
-            <p class="dark-p">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
+            <h2>Program Name</h2>
+            <div class="text dark">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
               auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
-              Netus sagittis eleifend aliquet urna quis.</p>
-            <button class="button-content">SMALL BUTTON</button>
+              Netus sagittis eleifend aliquet urna quis.
+            </div>
+            <button class="button-content">small button</button>
           </div>
         </div>
       </div>
