Fixed number3 task1

--- a/lw2/task1/index.html
+++ b/lw2/task1/index.html
@@ -70,7 +70,7 @@
               auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
               Netus sagittis eleifend aliquet urna quis.
             </div>
-            <button>small button</button>
+            <button class=".button">small button</button>
           </div>
         </div>
       </div>
