--- a/lw2/task1/index.html
+++ b/lw2/task1/index.html
@@ -30,7 +30,7 @@
             auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
             Netus sagittis eleifend aliquet urna quis.
           </div>
-          <button class="button-content">small button</button>
+          <button class="button">small button</button>
         </div>
         <div class="content">
           <div class="img-content">
@@ -42,7 +42,7 @@
               auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
               Netus sagittis eleifend aliquet urna quis.
             </div>
-            <button class="button-content">small button</button>
+            <button class="button">small button</button>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
             auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
             Netus sagittis eleifend aliquet urna quis.
           </div>
-          <button class="button-content">small button</button>
+          <button class="button">small button</button>
         </div>
         <div class="content">
           <div class="img-content">
