--- a/lw2/task1/index.html
+++ b/lw2/task1/index.html
@@ -11,66 +11,68 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="header">
-    <h1 class="header-title">Our<span class="underline">Programs</span></h1>
-    <div class="text-header">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus 
-    pulvinar non sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus 
-    mattis nunc aliquam pharetra feugiat ante sollicitudin.
-   </div>
-  </div>
-  <div class="content-container">
-    <div class="row">
-      <div class="content">
-        <div class="img-content">
-          <img src="img/image.svg" alt="">
-        </div>
-        <div class="text-content">
-          <h2>Program Name</h2>
-          <div class="text">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
-            auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
-            Netus sagittis eleifend aliquet urna quis.
-          </div>
-          <button class="button">small button</button>
-        </div>
+  <div class="container">
+    <div class="header">
+      <h1 class="header-title">Our<span class="underline">Programs</span></h1>
+      <div class="text-header">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus 
+      pulvinar non sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus 
+      mattis nunc aliquam pharetra feugiat ante sollicitudin.
+    </div>
+    </div>
+    <div class="content-container">
+      <div class="row">
         <div class="content">
           <div class="img-content">
             <img src="img/image.svg" alt="">
           </div>
           <div class="text-content">
-            <h2>Program Name</h2>
+            <div class="title-content">Program Name</div>
             <div class="text">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
               auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
               Netus sagittis eleifend aliquet urna quis.
             </div>
             <button class="button">small button</button>
+          </div>
+          <div class="content">
+            <div class="img-content">
+              <img src="img/image.svg" alt="">
+            </div>
+            <div class="text-content">
+              <div class="title-content">Program Name</div>
+              <div class="text">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
+                auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
+                Netus sagittis eleifend aliquet urna quis.
+              </div>
+              <button class="button">small button</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="content">
-        <div class="img-content">
-          <img src="img/image.svg" alt="">
-        </div>
-        <div class="text-content">
-          <h2>Program Name</h2>
-          <div class="text">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
-            auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
-            Netus sagittis eleifend aliquet urna quis.
-          </div>
-          <button class="button">small button</button>
-        </div>
+      <div class="row">
         <div class="content">
           <div class="img-content">
             <img src="img/image.svg" alt="">
           </div>
           <div class="text-content">
-            <h2>Program Name</h2>
+            <div class="title-content">Program Name</div>
             <div class="text">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
               auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
               Netus sagittis eleifend aliquet urna quis.
             </div>
             <button class="button">small button</button>
+          </div>
+          <div class="content">
+            <div class="img-content">
+              <img src="img/image.svg" alt="">
+            </div>
+            <div class="text-content">
+              <div class="title-content">Program Name</div>
+              <div class="text">Sagittis, eu pretium massa quisque cursus augue massa cursus. Sed quisque velit,
+                auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim sagittis at.
+                Netus sagittis eleifend aliquet urna quis.
+              </div>
+              <button class="button">small button</button>
+            </div>
           </div>
         </div>
       </div>
