Fixed task 1 and task 3

--- a/lw3/task1/index.html
+++ b/lw3/task1/index.html
@@ -16,9 +16,9 @@
     <div class="content">
       <table class="table-content">
         <tr class="title">
-          <th class="title-descript weight">Description</th>
+          <th class="title-description weight">Description</th>
           <th class="title-size weight">Size</th>
-          <th class="title-quan weight">Quantity</th>
+          <th class="title-quantity weight">Quantity</th>
           <th class="title-remove weight">Remove</th>
           <th class="title-price weight">Price</th>
         </tr>
@@ -36,10 +36,10 @@
             <p class="size-btn">S</p>
           </td>
           <td class="quantity">
-            <form class="quan">
-              <button class="quan-plus">+</button>
-              <div class="quan-number">1</div>
-              <button class="quan-minus">-</button>
+            <form class="quantity-form">
+              <button class="quantity-plus">+</button>
+              <div class="quantity-number">1</div>
+              <button class="quantity-minus">-</button>
             </form>
           </td>
           <td class="remove">
@@ -63,10 +63,10 @@
             <p class="size-btn">S</p>
           </td>
           <td class="quantity">
-            <form class="quan">
-              <button class="quan-plus">+</button>
-              <div class="quan-number">1</div>
-              <button class="quan-minus">-</button>
+            <form class="quantity-form">
+              <button class="quantity-plus">+</button>
+              <div class="quantity-number">1</div>
+              <button class="quantity-minus">-</button>
             </form>
           </td>
           <td class="remove">
@@ -107,12 +107,12 @@
             <p class="btn-write-text">Apply Discount</p>
           </button>
         </form>
-        <div class="check">
-          <button class="btn-check">
-            <p class="btn-check-text">Checkout</p>
+        <div class="checkout">
+          <button class="btn-checkout">
+            <p class="btn-checkout-text">Checkout</p>
           </button>
-          <button class="check-img">
-            <img src="img/korzina.png" class="korzina">
+          <button class="checkout-img">
+            <img src="img/korzina.png" class="basket">
           </button>
         </div>
       </div>
