--- a/lw4/task2/index.html
+++ b/lw4/task2/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -11,13 +12,97 @@
   <div class="container">
     <div class="todo-list">
       <div class="header">
-
+        <div class="header--btn prev">&lt;</div>
+        <div class="header_date">Monday , <span class="header_date-month">March 14th</span></div>
+        <div class="header--btn next">&gt;</div>
       </div>
       <div class="content">
-
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Morning run</p>
+          </div>
+          <p class="content-list_time">7:30</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Meeting</p>
+          </div>
+          <p class="content-list_time">10:15</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Lunch with Mike</p>
+          </div>
+          <p class="content-list_time">13:00</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Pay bills</p>
+          </div>
+          <p class="content-list_time">All day</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Renew gym membership</p>
+          </div>
+          <p class="content-list_time">All day</p>
+        </div>
       </div>
       <div class="footer">
-
+        <p class="footer_tasks">5 tasks</p>
+        <a href="#" class="footer--add">add new +</a>
+      </div>
+    </div>
+    <div class="todo-list">
+      <div class="header">
+        <div class="header--btn prev">&lt;</div>
+        <div class="header_date">Monday , <span class="header_date-month">March 14th</span></div>
+        <div class="header--btn next">&gt;</div>
+      </div>
+      <div class="content">
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Meeting</p>
+          </div>
+          <p class="content-list_time">10:15</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Lunch with Mike</p>
+          </div>
+          <p class="content-list_time">13:00</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Pay bills</p>
+          </div>
+          <p class="content-list_time">All day</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text">Renew gym membership</p>
+          </div>
+          <p class="content-list_time">All day</p>
+        </div>
+        <div class="content-list">
+          <div class="content-list-checkbox">
+            <input type="checkbox" checked="checked"class="content-list_checkbox-input">
+            <p class="content-list_checkbox-text--selected">Morning run</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <p class="footer_tasks">5 tasks</p>
+        <a href="#" class="footer--add">add new +</a>
       </div>
     </div>
   </div>
