--- a/lw4/task2/index.html
+++ b/lw4/task2/index.html
@@ -10,47 +10,47 @@
 </head>
 <body>
   <div class="container">
-    <div class="todo-list">
+    <div class="content">
       <div class="header">
         <div class="header--btn prev">&lt;</div>
         <div class="header_date">Monday , <span class="header_date-month">March 14th</span></div>
         <div class="header--btn next">&gt;</div>
       </div>
-      <div class="content">
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Morning run</p>
+      <div class="todo-list">
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Morning run</p>
           </div>
-          <p class="content-list_time">7:30</p>
+          <p class="todo-list_time">7:30</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Meeting</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Meeting</p>
           </div>
-          <p class="content-list_time">10:15</p>
+          <p class="todo-list-item_time">10:15</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Lunch with Mike</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Lunch with Mike</p>
           </div>
-          <p class="content-list_time">13:00</p>
+          <p class="todo-list-item_time">13:00</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Pay bills</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Pay bills</p>
           </div>
-          <p class="content-list_time">All day</p>
+          <p class="todo-list-item_time">All day</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Renew gym membership</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Renew gym membership</p>
           </div>
-          <p class="content-list_time">All day</p>
+          <p class="todo-list-item_time">All day</p>
         </div>
       </div>
       <div class="footer">
@@ -58,45 +58,45 @@
         <a href="#" class="footer--add">add new +</a>
       </div>
     </div>
-    <div class="todo-list">
+    <div class="content">
       <div class="header">
         <div class="header--btn prev">&lt;</div>
         <div class="header_date">Monday , <span class="header_date-month">March 14th</span></div>
         <div class="header--btn next">&gt;</div>
       </div>
-      <div class="content">
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Meeting</p>
+      <div class="todo-list">
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Meeting</p>
           </div>
-          <p class="content-list_time">10:15</p>
+          <p class="todo-list-item_time">10:15</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Lunch with Mike</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Lunch with Mike</p>
           </div>
-          <p class="content-list_time">13:00</p>
+          <p class="todo-list-item_time">13:00</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Pay bills</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Pay bills</p>
           </div>
-          <p class="content-list_time">All day</p>
+          <p class="todo-list-item_time">All day</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text">Renew gym membership</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text">Renew gym membership</p>
           </div>
-          <p class="content-list_time">All day</p>
+          <p class="todo-list-item_time">All day</p>
         </div>
-        <div class="content-list">
-          <div class="content-list-checkbox">
-            <input type="checkbox" checked="checked"class="content-list_checkbox-input">
-            <p class="content-list_checkbox-text--selected">Morning run</p>
+        <div class="todo-list-item">
+          <div class="todo-list-item-checkbox">
+            <input type="checkbox" checked="checked" class="todo-list-item_checkbox-input">
+            <p class="todo-list-item_checkbox-text--completed">Morning run</p>
           </div>
         </div>
       </div>
